--- a/src/Diamante/FrontBundle/Resources/assets/less/shared.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/shared.less
@@ -48,6 +48,12 @@
   }
 }
 
+.btn {
+  border-width: 2px;
+  text-transform: uppercase;
+  .button-size(14px; 40px; 14px; 1; 40px);
+}
+
 .modal-body {
   .alert {
     font-size: 95%;
