--- a/src/Diamante/FrontBundle/Resources/assets/less/variables.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/variables.less
@@ -1,6 +1,22 @@
+@mainColor: #50828E;
 @icon-font-path: "../js/vendor/bootstrap/fonts/";
 @fa-font-path: "../js/vendor/fontawesome/fonts/";
 
 @main-gutter: 40px;
-@header-height: 124px;
+@header-height: 111px;
 @footer-height: 60px;
+
+// Buttons
+@btn-font-weight: 500;
+
+@btn-default-color: rgba(0, 0, 0, .6);
+@btn-default-bg: #fff;
+@btn-default-border: rgba(0, 0, 0, .6);
+
+@btn-primary-bg: #50828E;
+@btn-primary-border: #50828E;
+
+// Modals
+@modal-backdrop-opacity: .9;
+@modal-content-bg: #fff;
+@modal-label-color: #949696;
