--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Header/templates/header.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Header/templates/header.ejs
@@ -1,18 +1,23 @@
-<div class="row">
-  <a href="<%= baseUrl %>" class="logo col-sm-6">
-    <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk"/>
+<div class="row header-links">
+  <a href="<%= baseUrl %>" class="logo col-sm-3 col-xs-6">
+    <img src="<%= basePath %>/bundles/diamantefront/img/logo.png" alt="DiamanteDesk" class="visible-md-block visible-lg-block visible-sm-block" />
+    <img src="<%= basePath %>/bundles/diamantefront/img/logo_xs.png" alt="DiamanteDesk" class="logo-xs visible-xs-block" />
   </a>
-  <div class="col-sm-6">
+  <div class="col-sm-2 header-create-ticket">
+    <div class="create-ticket form-group form-group-lg">
+      <a href="#" class="btn js-create-ticket">New Ticket</a>
+    </div>
+  </div>
+  <div class="col-sm-4 header-search">
+    <form class="search-field form-group form-group-lg js-search-form">
+      <input type="search" class="form-control js-search-input" name="search" placeholder="Search"/>
+    </form>
+  </div>
+  <div class="col-sm-3 header-user-profile">
     <div id="profile" class="profile pull-right">
       <span class="loading">loading...</span>
     </div>
     <div class="quick-access pull-right">
-      <form class="search-field form-group form-group-lg js-search-form">
-        <input type="search" class="form-control js-search-input" name="search" placeholder="Search"/>
-      </form>
-      <div class="create-ticket form-group form-group-lg">
-        <button class="btn btn btn-primary js-create-ticket">Add New Ticket</button>
-      </div>
     </div>
   </div>
 </div>
