--- a/src/Diamante/FrontBundle/Resources/assets/less/layout/header.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/layout/header.less
@@ -1,4 +1,5 @@
 #header {
+  background: @mainColor;
   position: fixed;
   right: 0;
   left: 0;
@@ -11,13 +12,96 @@
   }
 
   .container {
-    background: #f5f5f5;
     padding: 0 @main-gutter;
+    position: relative;
     min-height: @header-height;
   }
 
   .logo {
-    margin: 28px 0;
+    margin: 40px 0 0;
+    .logo-xs {
+      display: block;
+      margin-top: 5px;
+      max-height: 30px;
+    }
+  }
+
+  .create-ticket {
+    padding-top: 40px;
+    .btn {
+      @time: 0.4s;
+      color: #41ffd4;
+      background: #41ffd4;
+      line-height: 26px;
+      border: 2px solid #41ffd4;
+      border-radius: 40px;
+      overflow: hidden;
+      position: relative;
+      text-transform: uppercase;
+      padding: 5px;
+      height: 40px;
+      text-indent: 30px;
+      width: 40px;
+      -webkit-transition: width @time cubic-bezier(0, 1.22, 0.66, 1), color @time, background @time;
+              transition: width @time cubic-bezier(0, 1.22, 0.66, 1), color @time, background @time;
+      &:hover,
+      &:focus {
+        color: #fff;
+        background: @mainColor;
+        -webkit-animation-direction: reverse;
+                animation-direction: reverse;
+        width: 146px;
+        &:before,
+        &:after {
+          border-color: #fff;
+        }
+      }
+      &:before {
+        content: '';
+        border-right: 2px solid @mainColor;
+        position: absolute;
+        top: 11px;
+        left: 17px;
+        line-height: 10px;
+        height: 14px;
+        width: 0;
+      }
+      &:after {
+        content: '';
+        border-top: 2px solid @mainColor;
+        position: absolute;
+        top: 17px;
+        left: 11px;
+        height: 0;
+        width: 14px;
+      }
+    }
+  }
+
+  .search-field {
+    display: block;
+    margin: 46px 0 0;
+    input {
+      color: #fff;
+      background: none;
+      border: none;
+      border-radius: 0;
+      border-bottom: 2px solid #fff;
+      box-shadow: none;
+      padding: 4px 0;
+    }
+    :-ms-input-placeholder {
+      color: #fff
+    }
+    ::-moz-placeholder {
+      color: #fff
+    }
+    ::-webkit-input-placeholder {
+      color: #fff
+    }
+    ::placeholder {
+      color: #fff
+    }
   }
 
   .quick-access {
@@ -29,11 +113,153 @@
       vertical-align: top;
     }
   }
+
+  .navbar {
+    min-height: 0;
+    margin: 10px 0;
+  }
+  .navbar-nav {
+    > li {
+      > a {
+        color: #fff;
+        margin-right: 20px;
+        padding: 0;
+        &:hover {
+          background: none;
+        }
+      }
+    }
+  }
+
+  .user-wrapper {
+    margin: 40px 0 0;
+    position: relative;
+    height: 40px;
+    .user-actions {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      .user-action {
+        display: block;
+      }
+
+      .user-edit {
+        color: #fff;
+        display: inline-block;
+        border-radius: 20px;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 40px;
+        width: 40px;
+        vertical-align: bottom;
+        z-index: 2;
+        -webkit-transition: right .3s ease-out;
+                transition: right .3s ease-out;
+        &:after {
+          content: "\f007";
+          opacity: 0;
+          display: inline-block;
+          font: normal normal normal 24px/1 FontAwesome;
+          font-size: inherit;
+          text-rendering: auto;
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+          text-align: center;
+          font-size: 24px;
+          line-height: 40px;
+          height: 40px;
+          width: 40px;
+          vertical-align: bottom;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: 3;
+          -webkit-transition: opacity .2s ease-out;
+             -moz-transition: opacity .2s ease-out;
+              -ms-transition: opacity .2s ease-out;
+               -o-transition: opacity .2s ease-out;
+                  transition: opacity .2s ease-out;
+        }
+        &:before {
+          content: '';
+          background: #000;
+          opacity: 0;
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 40px;
+          width: 40px;
+        }
+      }
+
+      .user-logout {
+        color: #fff;
+        background: #47747e;
+        border-radius: 20px;
+        overflow: hidden;
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 40px;
+        width: 40px;
+        text-align: right;
+        -webkit-transition: width .3s ease-out;
+                transition: width .3s ease-out;
+        &:after {
+          opacity: .5;
+          content: "\f011";
+          display: inline-block;
+          font: normal normal normal 24px/1 FontAwesome;
+          font-size: inherit;
+          text-rendering: auto;
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+          text-align: center;
+          font-size: 24px;
+          line-height: 40px;
+          height: 40px;
+          width: 40px;
+          vertical-align: bottom;
+          -webkit-transition: opacity .2s ease-out;
+             -moz-transition: opacity .2s ease-out;
+              -ms-transition: opacity .2s ease-out;
+               -o-transition: opacity .2s ease-out;
+                  transition: opacity .2s ease-out;
+        }
+        &:hover {
+          &:after {
+            opacity: 1;
+          }
+        }
+      }
+
+      &:hover {
+        .user-edit {
+          right: 40px;
+          &:before {
+            opacity: .7;
+          }
+          &:after {
+            opacity: .5;
+          }
+          &:hover {
+            &:after {
+              opacity: 1;
+            }
+          }
+        }
+        .user-logout {
+          width: 80px;
+        }
+      }
+    }
+  }
 }
 
 .logo {
   display: block;
-  height: 62px;
   img {
     max-width: 100%;
     max-height: 100%;
@@ -42,9 +268,102 @@
 
 @media (max-width: @screen-xs-max) {
   #header {
+    .container {
+      min-height: 100px;
+    }
     position: static;
     .logo {
-      text-align: center;
+      position: absolute;
+      left: 10px;
+      text-align: left;
+      margin-top: 20px;
+      min-width: 221px;
+    }
+    .header-links {
+      position: absolute;
+      top: 60px;
+      left: 0;
+      z-index: 1000;
+      margin: 0;
+      width: 100%;
+      .navbar-nav {
+        margin: 0;
+        text-align: center;
+        > li {
+          display: inline-block;
+          > a {
+            margin: 0 10px;
+          }
+        }
+      }
+    }
+    .create-ticket {
+      .btn {
+        &:hover,
+        &:focus {
+          width: 40px;
+        }
+      }
+    }
+    .header-create-ticket,
+    .header-search,
+    .header-user-profile {
+      position: absolute;
+      top: 20px;
+    }
+    .header-create-ticket {
+      right: 50px;
+      .create-ticket {
+        padding-top: 0;
+      }
+    }
+    .header-user-profile {
+      right: 0;
+      .user-wrapper {
+        margin-top: 0;
+      }
+    }
+    .header-search {
+      right: 100px;
+      .search-field {
+        position: relative;
+        margin-top: 0;
+        min-width: 40px;
+        &:before {
+          color: #fff;
+          content: '\f002';
+          display: inline-block;
+          font: normal normal normal 24px/1 FontAwesome;
+          font-size: inherit;
+          text-rendering: auto;
+          -webkit-font-smoothing: antialiased;
+          -moz-osx-font-smoothing: grayscale;
+          text-align: center;
+          font-size: 24px;
+          line-height: 40px;
+          height: 40px;
+          width: 40px;
+          position: absolute;
+          top: 0;
+          left: 0;
+        }
+        .form-control {
+          opacity: 0;
+          width: 40px;
+          -webkit-transition: all .3s cubic-bezier(0, 1.22, 0.66, 1);
+                  transition: all .3s cubic-bezier(0, 1.22, 0.66, 1);
+        }
+        &:hover,
+        &:focus {
+          &:before {
+            display: none;
+          }
+          .form-control {
+            opacity: 1;
+            width: 140px;
+          }
+        }
+      }
     }
   }
 }
