--- a/src/Diamante/FrontBundle/Resources/public/js/modules/User/templates/form.ejs
+++ b/src/Diamante/FrontBundle/Resources/public/js/modules/User/templates/form.ejs
@@ -1,4 +1,7 @@
 <form action="/" role="form">
+  <div class="user-avatar">
+    <img src="<%=avatar_url %>?s=100&d=identicon" class="user-image" alt="<%=first_name %> <%=last_name %>" />
+  </div>
   <div class="form-group">
     <label class="control-label" for="first_name">First Name</label>
     <input type="text" class="form-control"
@@ -16,5 +19,5 @@
     <input type="password" class="form-control"
            id="password" name="password">
   </div>
-  <button type="submit" class="btn btn-primary btn-block js-submit">Submit</button>
+  <button type="submit" class="btn btn-primary btn-block js-submit hidden">Submit</button>
 </form>
