--- a/src/Diamante/FrontBundle/Resources/assets/less/variables.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/variables.less
@@ -17,6 +17,7 @@
 @btn-primary-border: #50828E;
 
 // Modals
+@modal-backdrop-bg: #fff;
 @modal-backdrop-opacity: .9;
-@modal-content-bg: #fff;
+@modal-content-bg: none;
 @modal-label-color: #949696;
