--- a/src/Diamante/FrontBundle/Resources/assets/less/variables.less
+++ b/src/Diamante/FrontBundle/Resources/assets/less/variables.less
@@ -21,3 +21,8 @@
 @modal-backdrop-opacity: .9;
 @modal-content-bg: none;
 @modal-label-color: #949696;
+
+//Footer
+@footer-color: #fff;
+@footer-bg: #525252;
+@footer-height: 80px;
