--- a/src/Diamante/FrontBundle/Resources/assets/js/modules/Footer/templates/footer.ejs
+++ b/src/Diamante/FrontBundle/Resources/assets/js/modules/Footer/templates/footer.ejs
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-xs-6 copyright text-muted small">
+  <div class="col-xs-6 copyright small">
     Diamante is released under <a href="http://opensource.org/licenses/osl-3.0.php">OSL 3.0</a> License
     by <a href="http://eltrino.com">Eltrino LLC</a>
   </div>
