--- a/src/Diamante/DeskBundle/Resources/views/Search/Autocomplete/selection.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Search/Autocomplete/selection.html.twig
@@ -1,2 +1,2 @@
-<img src="<% if (typeof avatar !== 'undefined' && avatar) { %><%= avatar %><% } else { %>{{- asset('bundles/oroui/img/info-user.png') -}}<% } %>" width="16" height="16" />
-&nbsp;<% if(typeof fullName !== 'undefined') { %><%= _.escape(fullName) %> [<%=_.escape(type)%>]<% } %><%=_.escape(name)%>
+<span <% if (isDeleted == true) { %><%= _.escape("class=deleted-reporter")%><% } else { console.log(isDeleted)} %>><img src="<% if (typeof avatar !== 'undefined' && avatar) { %><%= avatar %><% } else { %>{{- asset('bundles/oroui/img/info-user.png') -}}<% } %>" width="16" height="16" />
+&nbsp;<% if(typeof fullName !== 'undefined') { %><%= _.escape(fullName) %> [<%=_.escape(type)%>]<% } %><%=_.escape(name)%></span>
