DIAM-1212: Renamed section in User view

--- a/src/Diamante/UserBundle/Resources/views/User/view.html.twig
+++ b/src/Diamante/UserBundle/Resources/views/User/view.html.twig
@@ -82,7 +82,7 @@
     %}
 
     {% set dataBlocks = dataBlocks|merge([{
-        'title': 'diamante.user.activity'|trans,
+        'title': 'diamante.user.labels.related_tickets'|trans,
         'subblocks': [{
             'title' : null,
             'data' : [dataGrid.renderGrid('diamante-user-ticket-grid', { "reporter": userid })],
