DIAM-1220 Email templates have been updated

--- a/src/Diamante/DeskBundle/Resources/views/Ticket/notification/notification.html.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/notification/notification.html.twig
@@ -41,7 +41,7 @@
                     {% endif %}
 
                     <div style="margin-top: 15px; font-size: 14px; font-weight: 200; line-height: 18px;">
-                        View this ticket <a href="{{ render_ticket_url(ticketKey, isOroUser) }}">{{ ticketKey }}</a> in
+                        You can view this ticket <a href="{{ render_ticket_url(ticketKey, isOroUser) }}">{{ ticketKey }}</a> in
                         DiamanteDesk
                     </div>
 
