--- a/src/Diamante/DeskBundle/Resources/views/Ticket/notification/notification.txt.twig
+++ b/src/Diamante/DeskBundle/Resources/views/Ticket/notification/notification.txt.twig
@@ -13,7 +13,7 @@
     {% endfor %}
 {% endif %}
 
-View this ticket {{ ticketKey }} in DiamanteDesk: {{ render_ticket_url(ticketKey, isOroUser) }}
+You can view this ticket {{ ticketKey }} in DiamanteDesk: {{ render_ticket_url(ticketKey, isOroUser) }}
 
 - DiamanteDesk
 
