--- a/src/Diamante/FrontBundle/Resources/views/Registration/email/confirmation.txt.twig
+++ b/src/Diamante/FrontBundle/Resources/views/Registration/email/confirmation.txt.twig
@@ -1,4 +1,4 @@
-Thank you.
+Thank you for registering with DiamanteDesk!
 
-Please click the link below  to confirm your email:
+Please click the link below to confirm your email:
 {{ url('diamante_front') }}/#confirm/{{ hash }}
