--- a/src/Diamante/FrontBundle/Resources/views/ResetPassword/email/reset.html.twig
+++ b/src/Diamante/FrontBundle/Resources/views/ResetPassword/email/reset.html.twig
@@ -24,8 +24,8 @@
                   </h1>
 
                   <p style="font-size: 16px; font-weight: 200; line-height: 20px;">
-                    We were told that you forgot your password.<br/>
-                    To restore your password click on link below<br />
+                    Can’t remember your password? We are always here for you!<br/>
+                    You can restore your password by clicking the link below:<br />
                     {{ url('diamante_front') }}/#newpassword/{{ activation_hash }}
                   </p>
                 </td>
@@ -33,7 +33,7 @@
               <tr>
                 <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
                   <p class="small thank-you" style="font-size: 14px; font-weight: 200; line-height: 20px; padding: 35px 0 0;">
-                    Thank you,
+                    Best Regards,
                     <br />
                     DiamanteDesk Team
                   </p>
