--- a/src/Diamante/UserBundle/Resources/views/Notification/Create/created.txt.twig
+++ b/src/Diamante/UserBundle/Resources/views/Notification/Create/created.txt.twig
@@ -1,5 +1,5 @@
-We have created account for you. You will be able to check status of your support tickets on support portal - {{ get_portal_link() }}
+Thank you for you request! We have created an account on our support portal - {{ get_portal_link() }} for you so you can check the status of all tickets you submitted to DiamanteDesk.
 
-Before using account please create new password for it.
+Please create a new password before signing in to your account.
 
-Follow the URL to proceed: {{ get_password_reset_link(activation_hash) }}
+Follow this link to proceed: {{ get_password_reset_link(activation_hash) }}
