--- a/src/Diamante/UserBundle/Resources/views/Notification/ForceReset/reset.txt.twig
+++ b/src/Diamante/UserBundle/Resources/views/Notification/ForceReset/reset.txt.twig
@@ -1,6 +1,6 @@
-Hey there!
+Hello!
 
-Something strange happened on our servers but we did everything possible to protect your data.
-Due to the security concerns administrator requested you to change your password. Click on link below to proceed.
+We would like to inform you that an unexpected server error occurred but we did everything possible to protect your data.
+Due to security concerns our administrator requested you to change your password. Click the link below to proceed:
 
 {{ get_password_reset_link(activation_hash) }}
