--- a/src/Diamante/FrontBundle/Resources/views/Registration/email/confirmation.html.twig
+++ b/src/Diamante/FrontBundle/Resources/views/Registration/email/confirmation.html.twig
@@ -20,11 +20,11 @@
               <tr>
                 <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
                   <h1 style="font-size: 20px; font-weight: 400; margin: 0 0 25px;">
-                    Thank you for registration with DiamanteDesk!
+                    Thank you for registering with DiamanteDesk!
                   </h1>
 
                   <p style="font-size: 16px; font-weight: 200; line-height: 20px;">
-                    Please click the link below  to confirm your email:
+                    Please click the link below to confirm your email:
                     <br />
                     {{ url('diamante_front') }}/#confirm/{{ hash }}
                   </p>
@@ -33,7 +33,7 @@
               <tr>
                 <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
                   <p class="small thank-you" style="font-size: 14px; font-weight: 200; line-height: 20px; padding: 35px 0 0;">
-                    Thank you,
+                    Best Regards,
                     <br />
                     DiamanteDesk Team
                   </p>
