--- a/src/Diamante/UserBundle/Resources/views/Notification/Create/created.html.twig
+++ b/src/Diamante/UserBundle/Resources/views/Notification/Create/created.html.twig
@@ -24,17 +24,17 @@
                             </h1>
 
                             <p style="font-size: 16px; font-weight: 200; line-height: 20px;">
-                                We have created account for you. You will be able to check status of your support tickets on <a href="{{ get_portal_link() }}">support portal</a>.<br/>
-                                Before using account please create new password for it. <br/>
+                                Thank you for you request! We have created an account on our <a href="{{ get_portal_link() }}">support portal</a> for you so you can check the status of all tickets you submitted to DiamanteDesk.<br/>
+                                Please create a new password before signing in to your account. <br/>
 
-                                Click <a href="{{ get_password_reset_link(activation_hash) }}">this link</a> to proceed.
+                                Follow <a href="{{ get_password_reset_link(activation_hash) }}">this link</a> to proceed.
                             </p>
                         </td>
                     </tr>
                     <tr>
                         <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
                             <p class="small thank-you" style="font-size: 14px; font-weight: 200; line-height: 20px; padding: 35px 0 0;">
-                                Thank you,
+                                Thank you!
                                 <br />
                                 DiamanteDesk Team
                             </p>
