--- a/src/Diamante/UserBundle/Resources/views/Notification/ForceReset/reset.html.twig
+++ b/src/Diamante/UserBundle/Resources/views/Notification/ForceReset/reset.html.twig
@@ -20,12 +20,12 @@
               <tr>
                 <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
                   <h1 style="font-size: 20px; font-weight: 400; margin: 0 0 25px;">
-                    Hey there!
+                    Hello!
                   </h1>
 
                   <p style="font-size: 16px; font-weight: 200; line-height: 20px;">
-                    Something strange happened on our servers but we did everything possible to protect your data. <br/>
-                    Due to the security concerns administrator requested you to change your password. Click on link below to proceed.<br/>
+                    We would like to inform you that an unexpected server error occurred but we did everything possible to protect your data. <br/>
+                    Due to security concerns our administrator requested you to change your password. Click the link below to proceed:<br/>
                     <a href="{{ get_password_reset_link(activation_hash) }}">Link to reset password.</a>
                   </p>
                 </td>
@@ -33,7 +33,7 @@
               <tr>
                 <td style="width: 100%; text-align: left; vertical-align: top; margin: 0; padding: 0;" align="left" valign="top">
                   <p class="small thank-you" style="font-size: 14px; font-weight: 200; line-height: 20px; padding: 35px 0 0;">
-                    Thank you,
+                    Thank you!
                     <br />
                     DiamanteDesk Team
                   </p>
